--- a/app/components/resources/resource.add.html
+++ b/app/components/resources/resource.add.html
@@ -8,7 +8,7 @@
     </div>
     <div class="panel-body" ng-if="add.update">
         <h4 class="modal-title">Edit {{ add.selectedCompany.name }}</h4>
-        <p class="font-bold">Edit this record if you believe you can improve the accuracy of the information</p>
+        <p class="font-bold">Edit this record to improve the accuracy of the information</p>
     </div>
 
     <div class="panel-body" style="margin-top: 20px;">
@@ -65,7 +65,7 @@
                                     What type of resource is this?
 
                                 </h4>
-                                <ui-select class="industry_select" multiple="multiple" ng-model="add.selectedCompany.resource_types" ng-disabled="disabled">
+                                <ui-select class="industry_select" multiple="multiple" ng-model="add.selectedCompany.resource_types">
                                     <ui-select-match placeholder="College, Accelerator, etc">{{$item}}</ui-select-match>
                                     <ui-select-choices repeat="p in add.resource_types">
                                         <div ng-bind="p"></div>
@@ -103,7 +103,7 @@
 
                                 </h4>
                                 <div class="panel-body industry_select" style="padding:1px; margin-top: 6px; margin-bottom: 6px;">
-                                    <ui-select multiple ng-model="add.selectedCompany.industries" tagging="true" tagging-label="(new)" ng-disabled="disabled" limit="6" alert_title="Sorry, only 6 items here." alert_text="Focus on markets that this organization has leadership in." alert_type="warning" style="border:none;">
+                                    <ui-select multiple ng-model="add.selectedCompany.industries" tagging="true" tagging-label="(new)" limit="6" alert_title="Sorry, only 6 items here." alert_text="Focus on markets that this organization has leadership in." alert_type="warning" style="border:none;">
                                         <ui-select-match placeholder="Search for markets..">{{$item}}</ui-select-match>
                                         <ui-select-choices repeat="industry in add.industries | filter:$select.search | limitTo: 25">
                                             {{industry}}
@@ -152,7 +152,7 @@
                                     Customize the url path:
 
                                 </h4>
-                                <input type="text" class="form-control input-md" placeholder="{{ add.selectCompany.url || add.encode(add.selectedCompany.name || '') }}" ng-model="add.selectedCompany.url" style="margin-bottom: 5px;">
+                                <input type="text" class="form-control input-md" placeholder="{{ add.selectCompany.url || add.encode(add.selectedCompany.name || '') }}" ng-model="add.selectedCompany.url" style="margin-bottom: 5px;" ng-disabled="add.update">
                                 <em style="font-size: 11px;" class="pull-right">The path will be: startupcommunity.org/<strong><span style="text-transform: lowercase;">{{ add.encode(add.selectedCompany.url || add.selectedCompany.name) }}</span></strong></em>
                             </div>
                             <div class="col-lg-12" style="margin-top:-10px;">
