--- a/app/less/various.less
+++ b/app/less/various.less
@@ -434,9 +434,10 @@ body #inbox_header_text, body #inbox_mark_read, body #inbox_footer, body #inbox_
 }
 
 .user-row {
-  padding: 2px 0 0 70px;
-  min-height: 64px;
-  line-height: 2;
+  padding: 2px 0 0 40px;
+  min-height: 32px;
+  line-height: 1.3;
+  font-size: 13px;
 }
 
 .user-row-border {
@@ -446,8 +447,8 @@ body #inbox_header_text, body #inbox_mark_read, body #inbox_footer, body #inbox_
 }
 
 .user-img {
-  height:58px;
-  width: 58px;
+  height: 32px;
+  width: 32px;
 }
 
 .user-summary {
@@ -492,15 +493,16 @@ input:-moz-placeholder {
 }
 
 .dash-row {
-  max-height: 36px;
+  max-height: 15px;
   overflow: hidden;
-  padding-bottom: 50px;
   margin-bottom: -10px;
+  font-size: 12px;
 }
 
 .dash-table {
   vertical-align: top;
-  min-height: 80px;
+  max-height: 57px;
+  margin-top: 3px;
 }
 
 .w200 {
