--- a/app/less/various.less
+++ b/app/less/various.less
@@ -434,7 +434,7 @@ body #inbox_header_text, body #inbox_mark_read, body #inbox_footer, body #inbox_
 }
 
 .user-row {
-  padding: 2px 0 0 40px;
+  padding-left: 40px;
   min-height: 32px;
   line-height: 1.3;
   font-size: 13px;
@@ -501,8 +501,7 @@ input:-moz-placeholder {
 
 .dash-table {
   vertical-align: top;
-  max-height: 57px;
-  margin-top: 3px;
+  max-height: 62px;
 }
 
 .w200 {
