--- a/app/components/companies/company.dashboard.team.html
+++ b/app/components/companies/company.dashboard.team.html
@@ -1,135 +1,23 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-6">
-        <div class="hpanel hnavyblue" >
+    <div ng-repeat="(type, val) in profile.team_panels" class="col-xs-12 col-sm-6">
+        <div class="hpanel" ng-class="val.color" >
             <div class="panel-body" style="padding: 10px 5px;">
                 <div class="col-xs-8">
-                    <div class="stats-title pull-left">
+                    <div class="stats-title pull-left" style="white-space: nowrap;">
+                        <div class="stats-icon pull-left" style="margin-top: 11px; margin-right: 8px;">
+                            <i ng-class="val.icon" class="fa-2x"></i>
+                        </div>
                         <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3>Founders</h3>
-                            <h1 class="text-info">{{profile.team.count.founder}}</h1>
+                            <h3 ng-bind="type" style="padding-left: 5px;"></h3>
                         </a>
                     </div>
                 </div>
                 <div class="col-xs-4">
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-paper-plane fa-4x"></i>
-                    </div>
+                    <h3 class="text-info pull-right">{{profile.team.count[val.name]}}</h3>
                 </div>
             </div>
             <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in profile.team.founder">
-                    <div style="margin-right: -2px; margin-bottom:-5px;">
-                        <div ng-if="$first" style="padding-top:5px;"></div>
-                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
-                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-12 col-sm-6">
-        <div class="hpanel hgreen" >
-            <div class="panel-body" style="padding: 10px 5px;">
-                <div class="col-xs-8">
-                    <div class="stats-title pull-left">
-                        <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3>Investors</h3>
-                            <h1 class="text-info">{{profile.team.count.investor}}</h1>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xs-4">
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-gleam fa-4x"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in profile.team.investor">
-                    <div style="margin-right: -2px; margin-bottom:-5px;">
-                        <div ng-if="$first" style="padding-top:5px;"></div>
-                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
-                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-12 col-sm-6">
-        <div class="hpanel hviolet" >
-            <div class="panel-body" style="padding: 10px 5px;">
-                <div class="col-xs-8">
-                    <div class="stats-title pull-left">
-                        <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3>Team Members</h3>
-                            <h1 class="text-info">{{profile.team.count.team}}</h1>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xs-4">
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-ball fa-4x"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in profile.team.team">
-                    <div style="margin-right: -2px; margin-bottom:-5px;">
-                        <div ng-if="$first" style="padding-top:5px;"></div>
-                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
-                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-12 col-sm-6">
-        <div class="hpanel hblue" >
-            <div class="panel-body" style="padding: 10px 5px;">
-                <div class="col-xs-8">
-                    <div class="stats-title pull-left">
-                        <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3>Mentors</h3>
-                            <h1 class="text-info">{{profile.team.count.mentor}}</h1>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xs-4">
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-study fa-4x"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in profile.team.mentor">
-                    <div style="margin-right: -2px; margin-bottom:-5px;">
-                        <div ng-if="$first" style="padding-top:5px;"></div>
-                        <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
-                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-12 col-sm-6">
-        <div class="hpanel hyellow" >
-            <div class="panel-body" style="padding: 10px 5px;">
-                <div class="col-xs-8">
-                    <div class="stats-title pull-left">
-                        <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3>Service Providers</h3>
-                            <h1 class="text-info">{{profile.team.count.provider}}</h1>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xs-4">
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-portfolio fa-4x"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in profile.team.provider">
+                <div ng-repeat="item in profile.team[val.name]">
                     <div style="margin-right: -2px; margin-bottom:-5px;">
                         <div ng-if="$first" style="padding-top:5px;"></div>
                         <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
