big encode fix for spaces

--- a/app/components/resources/resource.add.html
+++ b/app/components/resources/resource.add.html
@@ -152,8 +152,8 @@
                                     Customize the url path:
 
                                 </h4>
-                                <input type="text" class="form-control input-md" placeholder="{{ add.selectCompany.url || add.encode(add.selectedCompany.name || '') }}" ng-model="add.selectedCompany.url" style="margin-bottom: 5px;" ng-disabled="add.update">
-                                <em style="font-size: 11px;" class="pull-right">The path will be: startupcommunity.org/<strong><span style="text-transform: lowercase;">{{ add.encode(add.selectedCompany.url || add.selectedCompany.name) }}</span></strong></em>
+                                <input type="text" class="form-control input-md" placeholder="{{ add.selectCompany.url }}" ng-model="add.selectedCompany.url" style="margin-bottom: 5px;" ng-disabled="add.update">
+                                <em style="font-size: 11px;" class="pull-right">The path will be: startupcommunity.org/<strong><span style="text-transform: lowercase;">{{ add.selectedCompany.url }}</span></strong></em>
                             </div>
                             <div class="col-lg-12" style="margin-top:-10px;">
                                 <h4 class="w400">
