--- a/app/components/dashboard/dashboard.html
+++ b/app/components/dashboard/dashboard.html
@@ -54,8 +54,7 @@
 <div class="row">
     <div class="col-lg-2 col-lg-offset-1">
         <div class="hpanel">
-            <div class="panel-heading hbuilt">
-                <div panel-tools></div>
+            <div class="hbuilt">
                 Accelerators: 4
             </div>
         </div>
