--- a/app/components/users/user.list.item.html
+++ b/app/components/users/user.list.item.html
@@ -1,7 +1,7 @@
 <div class="col-md-12 dash-table">
     <div>
         <a ui-sref="user.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value, top: nav.top, communities: nav.communities, user: nav.user })" title="View {{::item.value.profile.name | words:0}}'s Profile">
-            <img ng-src="{{item.value.profile.avatar || item.value.profile.linkedin.pictureUrl || '/public/images/blank_avatar.png'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image img-circle pull-left" onerror="this.src='/public/images/blank_avatar.png'"/>
+            <img ng-src="{{item.value.profile.avatar || '/public/images/blank_avatar.png'}}" alt="{{::item.value.profile.name}}" class="user-img widget-image img-circle pull-left" onerror="this.src='/public/images/blank_avatar.png'"/>
         </a>
     </div>
     <div style="position: absolute; margin-left: 11px;">
@@ -11,17 +11,17 @@
         <a ui-sref="user.dashboard({profile: item.value, location_path: item.path.key, location: nav.community, community: item.value, top: nav.top, communities: nav.communities, user: nav.user })" title="View {{::item.value.profile.name | words:0}}'s Profile" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
         <a ng-if="nav.community.type == 'network' || nav.location.type == 'network'" ng-click="nav.contact(item)" title="Contact {{item.value.profile.name}}" class="pull-left" style="margin-left: 6px; margin-top: 2px; padding: 0 8px 0 5px; line-height: 0;">
             <i class="pe-7s-mail" style="font-size: 20px; opacity: .45;"></i></a>
-        <a ng-show="(item.value.profile.summary).length > 0 || (item.value.profile.linkedin.summary).length > 0" title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;<i class="fa fa-chevron-down fa-fw"></i></a>
+        <a ng-show="item.value.profile.summary.length > 0" title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;<i class="fa fa-chevron-down fa-fw"></i></a>
         <li ng-repeat="(item, val) in item.value.roles" class="user-role role-right" ><i ng-attr-title="{{item[0].toUpperCase() + item.slice(1);}}" style="font-weight: bold;" ng-class="{'text-primary pe-7s-paper-plane' : item == 'founder', 'text-danger pe-7s-flag' : item == 'leader', 'text-info pe-7s-study' : item == 'mentor', 'text-success pe-7s-gleam' : item == 'investor', 'text-default pe-7s-ball' : item == 'team', 'text-warning pe-7s-portfolio' : item == 'provider'}"></i></li>
         <br>
         <div class="dash-row">
-            <span class="text-muted" ng-bind-html="(item.value.profile.headline || item.value.profile.linkedin.headline) | highlight:users.lastQuery"></span>
+            <span class="text-muted" ng-bind-html="::item.value.profile.headline | highlight:users.lastQuery" title="{{::item.value.profile.headline}}"></span>
         </div>
-        <div ng-show="(showSummary || $state.includes('search.*')) && (item.value.profile.summary || item.value.profile.linkedin.summary)">
+        <div ng-show="(showSummary || $state.includes('search.*')) && item.value.profile.summary">
             <div style="padding-bottom: 10px;">
                 <hr>
-                <span class="text-muted" style="white-space:pre-wrap;" ng-bind-html="(item.value.profile.summary || item.value.profile.linkedin.summary) | linky:'_blank' | highlight:users.lastQuery | safe_html"></span>
-                <div id="skills" ng-show="(showSummary || users.lastQuery) && (item.value.profile.summary || item.value.profile.linkedin.summary)" class="skills-top">
+                <span class="text-muted" style="white-space:pre-wrap;" ng-bind-html="::item.value.profile.summary | linky:'_blank' | highlight:users.lastQuery | safe_html"></span>
+                <div id="skills" ng-show="(showSummary || users.lastQuery) && item.value.profile.summary" class="skills-top">
                     <li ng-repeat="skill in item.value.profile.skills" class="label btn-default skills">
                         <a><span ui-sref="search.dashboard({location_path: nav.location.key, community: nav.location, query: skill, user: nav.user, communities: nav.communities, top: nav.top})" ng-bind-html="::skill | highlight:users.lastQuery"></span></a>
                     </li>
