updated user profile

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1640,6 +1640,44 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
 
 }
 
+// for 5-column layout
+
+.col-xs-5ths,
+.col-sm-5ths,
+.col-md-5ths,
+.col-lg-5ths {
+  position: relative;
+  min-height: 1px;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.col-xs-5ths {
+  width: 20%;
+  float: left;
+}
+
+@media (min-width: 768px) {
+  .col-sm-5ths {
+    width: 20%;
+    float: left;
+  }
+}
+
+@media (min-width: 992px) {
+  .col-md-5ths {
+    width: 20%;
+    float: left;
+  }
+}
+
+@media (min-width: 1200px) {
+  .col-lg-5ths {
+    width: 20%;
+    float: left;
+  }
+}
+
 /* Fix for xeditable and chekcbox plugin in angularJS version */
 .x-edit-checkbox .checkbox label::before {
   display: none;
