--- a/app/components/companies/company.dashboard.team.html
+++ b/app/components/companies/company.dashboard.team.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div ng-repeat="(type, val) in profile.team_panels" class="col-xs-12 col-sm-6">
+    <div ng-repeat="(type, val) in profile.team_panels" class="col-xs-12 col-sm-6 col-md-4">
         <div class="hpanel" ng-class="val.color" >
             <div class="panel-body" style="padding: 10px 5px;">
                 <div class="col-xs-8">
