--- a/app/components/users/user.dashboard.companies.html
+++ b/app/components/users/user.dashboard.companies.html
@@ -1,136 +1,24 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-6">
-        <div class="hpanel hnavyblue" >
+    <div ng-repeat="(type, val) in profile.team_panels" class="col-xs-12 col-sm-6 col-md-4">
+        <div class="hpanel" ng-class="val.color">
             <div class="panel-body" style="padding: 10px 5px;">
                 <div class="col-xs-8">
-                    <div class="stats-title pull-left">
+                    <div class="stats-title pull-left" style="white-space: nowrap;">
+                        <div class="stats-icon pull-left" style="margin-top: 11px; margin-right: 8px;">
+                            <i ng-class="val.icon" class="fa-2x"></i>
+                        </div>
                         <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3>Founder</h3>
-                            <h1 class="text-info">{{profile.companies.count.founder}}</h1>
+                            <h3 ng-bind="type.slice(0, -1);" style="padding-left: 5px;"></h3>
                             <!--<small class="text-info" ng-click="nav.addCompany();">+ Add Company</small>-->
                         </a>
                     </div>
                 </div>
                 <div class="col-xs-4">
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-paper-plane fa-4x"></i>
-                    </div>
+                    <h3 class="text-info pull-right">{{profile.companies.count[val.name]}}</h3>
                 </div>
             </div>
             <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in profile.companies.founder">
-                    <div style="margin-right: -2px; margin-bottom:-5px;">
-                        <div ng-if="$first" style="padding-top:5px;"></div>
-                        <div class="row" ng-include="'components/companies/company.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
-                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-12 col-sm-6">
-        <div class="hpanel hgreen" >
-            <div class="panel-body" style="padding: 10px 5px;">
-                <div class="col-xs-8">
-                    <div class="stats-title pull-left">
-                        <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3>Investor</h3>
-                            <h1 class="text-info">{{profile.companies.count.investor}}</h1>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xs-4">
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-gleam fa-4x"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in profile.companies.investor">
-                    <div style="margin-right: -2px; margin-bottom:-5px;">
-                        <div ng-if="$first" style="padding-top:5px;"></div>
-                        <div class="row" ng-include="'components/companies/company.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
-                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-12 col-sm-6">
-        <div class="hpanel hviolet" >
-            <div class="panel-body" style="padding: 10px 5px;">
-                <div class="col-xs-8">
-                    <div class="stats-title pull-left">
-                        <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3>Team Member</h3>
-                            <h1 class="text-info">{{profile.companies.count.team}}</h1>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xs-4">
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-ball fa-4x"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in profile.companies.team">
-                    <div style="margin-right: -2px; margin-bottom:-5px;">
-                        <div ng-if="$first" style="padding-top:5px;"></div>
-                        <div class="row" ng-include="'components/companies/company.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
-                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-12 col-sm-6">
-        <div class="hpanel hblue" >
-            <div class="panel-body" style="padding: 10px 5px;">
-                <div class="col-xs-8">
-                    <div class="stats-title pull-left">
-                        <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3>Mentor</h3>
-                            <h1 class="text-info">{{profile.companies.count.mentor}}</h1>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xs-4">
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-study fa-4x"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in profile.companies.mentor">
-                    <div style="margin-right: -2px; margin-bottom:-5px;">
-                        <div ng-if="$first" style="padding-top:5px;"></div>
-                        <div class="row" ng-include="'components/companies/company.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
-                        <div ng-if="$last" style="margin-bottom:-32px;"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-xs-12 col-sm-6">
-        <div class="hpanel hyellow" >
-            <div class="panel-body" style="padding: 10px 5px;">
-                <div class="col-xs-8">
-                    <div class="stats-title pull-left">
-                        <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3>Service Provider</h3>
-                            <h1 class="text-info">{{profile.companies.count.provider}}</h1>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-xs-4">
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-portfolio fa-4x"></i>
-                    </div>
-                </div>
-            </div>
-            <div class="panel-footer" style="background: #fff;">
-                <div ng-repeat="item in profile.companies.provider">
+                <div ng-repeat="item in profile.companies[val.name]">
                     <div style="margin-right: -2px; margin-bottom:-5px;">
                         <div ng-if="$first" style="padding-top:5px;"></div>
                         <div class="row" ng-include="'components/companies/company.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
