--- a/app/components/dashboard/dashboard.html
+++ b/app/components/dashboard/dashboard.html
@@ -80,7 +80,7 @@
                                 <div ng-if="$last" style="margin-bottom:-12px;"></div>
                             </div>
                         </div>
-                        <button class="btn btn-xs btn-default" style="margin-top: 6px;" ui-sref="{{'user.list' + nav.nav_url}}">view more</button>
+                        <button class="btn btn-xs btn-default" style="margin-top: 6px;" ui-sref="{{'user.list' + nav.nav_url}}">view all</button>
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                                 <div ng-if="$last" style="margin-bottom:-12px;"></div>
                             </div>
                         </div>
-                        <button class="btn btn-xs btn-default" style="margin-top: 6px;" ui-sref="{{'company.list' + nav.nav_url}}">view more</button>
+                        <button class="btn btn-xs btn-default" style="margin-top: 6px;" ui-sref="{{'company.list' + nav.nav_url}}">view all</button>
                     </div>
                 </div>
             </div>
@@ -138,7 +138,7 @@
                                 <div ng-if="$last" style="margin-bottom:-12px;"></div>
                             </div>
                         </div>
-                        <button class="btn btn-xs btn-default" style="margin-top: 6px;" ui-sref="{{'resource.list' + nav.nav_url}}">view more</button>
+                        <button class="btn btn-xs btn-default" style="margin-top: 6px;" ui-sref="{{'resource.list' + nav.nav_url}}">view all</button>
                     </div>
                 </div>
             </div>
