switched to buildings

--- a/app/components/users/user.dashboard.html
+++ b/app/components/users/user.dashboard.html
@@ -39,7 +39,7 @@
                 </div>
             </header>
         </div>
-        <span><div id="cover-photo" class="active" ng-style="{'background-image':'url(https://source.unsplash.com/category/nature)'}"></div><span class="cover-overlay"></span></span>
+        <span><div id="cover-photo" class="active" ng-style="{'background-image':'url(https://source.unsplash.com/category/buildings)'}"></div><span class="cover-overlay"></span></span>
     </div>
 </div>
 <div class="hpanel">
