--- a/app/components/settings.html
+++ b/app/components/settings.html
@@ -19,14 +19,14 @@
                 </div>
                 <hr>
                 <div ng-repeat="(k, v) in nav.user.roles.leader">
-                    <div ng-if="nav.communities[k].type == 'network'" style="padding-bottom:10px; font-size: 18px;">{{ nav.communities[k].profile.name }}
+                    <div ng-if="nav.communities[k].resource" style="padding-bottom:10px; font-size: 18px;">{{ nav.communities[k].profile.name }}
                         <button ng-click="nav.embedSettings(nav.communities[k])" class="btn btn-xs pull-right">Embed</button>
                         <button ng-click="nav.editCommunity(nav.communities[k])" class="btn btn-primary btn-xs pull-right" style="margin-right: 5px;">Edit</button>
                     </div>
                 </div>
                 <ul class="nav nav-second-level" style="margin-left: -15px;">
                     <li ng-if="nav.user.communities.indexOf(nav.user.profile.home) > -1">
-                        <button class="btn btn-success" ng-click="nav.editCommunity({'type':'network'})" style="margin: 10px 15px;">+&nbsp;&nbsp;Add Network</button>
+                        <button class="btn btn-success" ui-sref="resource.add" style="margin: 10px 15px;">+&nbsp;&nbsp;Add Resource</button>
                     </li>
                 </ul>
             </div>
