--- a/app/components/header/header_small.html
+++ b/app/components/header/header_small.html
@@ -12,7 +12,7 @@
                     <li ui-sref="{{'company.list' + nav.nav_url}}" ng-class="{ 'active' : nav.state.current.name == 'company.list' }">
                         <a>COMPANIES</a>
                     </li>
-                    <li ui-sref="{{'resource.list' + nav.nav_url}}" ng-class="{ 'active' : nav.state.current.name == 'resource.list' }" ng-if="nav.community.type !== 'network'">
+                    <li ui-sref="{{'resource.list' + nav.nav_url}}" ng-class="{ 'active' : nav.state.current.name == 'resource.list' }" ng-if="!nav.community.resource">
                         <a>RESOURCES</a>
                     </li>
                 </ul>
@@ -32,11 +32,11 @@
                 <div ng-if="!nav.user && (nav.state.current.name == 'company.list')" style="padding-top: 6px; margin-right: 8px; float: right;">
                     <button class="btn btn-sm btn-success" ng-click="nav.requestInvitation()" style="font-size: 12px; color: #fff;">Add Company</button>
                 </div>
-                <div ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.type == 'network' && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location.key) > -1))" style="padding-top: 6px; margin-right: 8px; float: right;">
+                <div ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.resource && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location.key) > -1))" style="padding-top: 6px; margin-right: 8px; float: right;">
                     <button class="btn btn-sm btn-success" ui-sref="company.add" style="font-size: 12px; color: #fff;">Add Company</button>
                 </div>
 
-                <div ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.type == 'network' && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location.key) > -1))" style="padding-top: 6px; margin-right: 8px; float: right;">
+                <div ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.resource && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location.key) > -1))" style="padding-top: 6px; margin-right: 8px; float: right;">
                     <button class="btn btn-sm btn-info" ng-click="nav.invitePeople()" style="font-size: 12px; color: #fff;">Invite People</button>
                 </div>
             </div>
