company profile broken

--- a/app/components/companies/company.dashboard.profile.html
+++ b/app/components/companies/company.dashboard.profile.html
@@ -22,40 +22,40 @@
     <div class="no-overflow profile-div" ng-if="profile.team.founder">
         <ul class="profile-ul">
             <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Founders:</p>
-            <li ng-repeat="(key, val) in profile.team.founder" class="profile-roles">
-                <a ui-sref="user.dashboard({profile: profile.team.founder[key].value, location_path: profile.team.founder[key].path.key, location: nav.community, community: profile.team.founder[key].value })">{{profile.team.founder[key].value.profile.name}} </a>
+            <li ng-repeat="key in profile.team.founder" class="profile-roles">
+                <a ui-sref="user.dashboard({profile: key.value, location_path: key.path.key, location: nav.community, community: key.value })">{{key.value.profile.name}} </a>
             </li>
         </ul>
     </div>
     <div class="no-overflow profile-div" ng-if="profile.team.investor">
         <ul class="profile-ul">
             <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Investors:</p>
-            <li ng-repeat="(key, val) in profile.team.investor" class="profile-roles">
-                <a ui-sref="user.dashboard({profile: profile.team.investor[key].value, location_path: profile.team.investor[key].path.key, location: nav.community, community: profile.team.investor[key].value })">{{profile.team.investor[key].value.profile.name}} </a>
+            <li ng-repeat="key in profile.team.investor" class="profile-roles">
+                <a ui-sref="user.dashboard({profile: key.value, location_path: key.path.key, location: nav.community, community: key.value })">{{key.value.profile.name}} </a>
             </li>
         </ul>
     </div>
     <div class="no-overflow profile-div" ng-if="profile.team.team">
         <ul class="profile-ul">
             <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Team Members:</p>
-            <li ng-repeat="(key, val) in profile.team.team" class="profile-roles">
-                <a ui-sref="user.dashboard({profile: profile.team.team[key].value, location_path: profile.team.team[key].path.key, location: nav.community, community: profile.team.team[key].value })">{{profile.team.team[key].value.profile.name}} </a>
+            <li ng-repeat="key in profile.team.team" class="profile-roles">
+                <a ui-sref="user.dashboard({profile: key.value, location_path: key.path.key, location: nav.community, community: key.value })">{{key.value.profile.name}} </a>
             </li>
         </ul>
     </div>
     <div class="no-overflow profile-div" ng-if="profile.team.mentor">
         <ul class="profile-ul">
             <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Mentors:</p>
-            <li ng-repeat="(key, val) in profile.team.mentor" class="profile-roles">
-                <a ui-sref="user.dashboard({profile: profile.team.mentor[key].value, location_path: profile.team.mentor[key].path.key, location: nav.community, community: profile.team.mentor[key].value })">{{profile.team.mentor[key].value.profile.name}} </a>
+            <li ng-repeat="key in profile.team.mentor" class="profile-roles">
+                <a ui-sref="user.dashboard({profile: key.value, location_path: key.path.key, location: nav.community, community: key.value })">{{key.value.profile.name}} </a>
             </li>
         </ul>
     </div>
     <div class="no-overflow profile-div" ng-if="profile.team.provider">
         <ul class="profile-ul">
             <p style="font-size: 14px; padding: 2px 5px 0 20px; float: left;">Service Providers:</p>
-            <li ng-repeat="(key, val) in profile.team.provider" class="profile-roles">
-                <a ui-sref="user.dashboard({profile: profile.team.provider[key].value, location_path: profile.team.provider[key].path.key, location: nav.community, community: profile.team.provider[key].value })">{{profile.team.provider[key].value.profile.name}} </a>
+            <li ng-repeat="key in profile.team.provider" class="profile-roles">
+                <a ui-sref="user.dashboard({profile: key.value, location_path: key.path.key, location: nav.community, community: key.value })">{{key.value.profile.name}} </a>
             </li>
         </ul>
     </div>
