--- a/app/components/companies/company.dashboard.team.html
+++ b/app/components/companies/company.dashboard.team.html
@@ -1,29 +1,29 @@
 <div class="row">
-    <div ng-repeat="(type, val) in profile.team_panels" class="col-xs-12 col-sm-6 col-md-4">
-        <div class="hpanel" ng-class="val.color" >
+    <div ng-repeat="type in profile.team_panels" class="col-xs-12 col-md-6">
+        <div class="hpanel" ng-class="type.color" >
             <div class="panel-body" style="padding: 10px 5px;">
                 <div class="col-xs-8">
                     <div class="stats-title pull-left" style="white-space: nowrap;">
                         <div class="stats-icon pull-left" style="margin-top: 11px; margin-right: 8px;">
-                            <i ng-class="val.icon" class="fa-2x"></i>
+                            <i ng-class="type.icon" class="fa-2x"></i>
                         </div>
                         <a ui-sref="{{'user.list' + nav.nav_url}}">
-                            <h3 ng-bind="type" style="padding-left: 5px;"></h3>
+                            <h3 ng-bind="type.title" style="padding-left: 5px;"></h3>
                         </a>
                     </div>
                 </div>
                 <div class="col-xs-4">
-                    <h3 class="text-info pull-right">{{::profile.team.count[val.name]}}</h3>
+                    <h3 class="text-info pull-right">{{::profile.team.count[type.name]}}</h3>
                 </div>
             </div>
             <div class="panel-footer" style="background: #fff; text-align: center;">
-                <div ng-repeat="item in profile.team[val.name]" style="text-align: left;">
+                <div ng-repeat="item in profile.team[type.name] | limitTo: 4" style="text-align: left;">
                     <div style="margin-right: -2px; margin-bottom:-5px;">
                         <div class="row" ng-include="'components/users/user.list.item.html'" style="margin-right: -14px; margin-bottom: 1px;"></div>
                     </div>
                 </div>
-                <div ng-if="!profile.team[val.name]">No {{::type.toLowerCase()}} yet..</div>
-                <div ng-if="nav.user.roles[val.name][profile.company.key]" class="btn btn-xs btn-default" style="margin-top: -2px;" ng-click="profile.remove(val.name)">Remove yourself as a {{::type.slice(0,-1)}}</div>
+                <div ng-if="!profile.team[type.name]">No {{::type.title.toLowerCase()}} yet..</div>
+                <div ng-if="nav.user.roles[type.name][profile.company.key]" class="btn btn-xs btn-default" style="margin-top: -2px;" ng-click="profile.remove(type.name)">Remove yourself as a {{::type.slice(0,-1)}}</div>
             </div>
         </div>
     </div>
